--- a/report/abstract.tex
+++ b/report/abstract.tex
@@ -1,7 +1,7 @@
 \begin{abstract}
 The pursuit of the perfect bird classifier is ongoing. Automated classifiers
 can facilitate research such as ornithology and ecology, and prevent plane
-crashes. In this paper we present how we used Case Based Reasoning to develop
+crashes. In this paper we present how we used Case-based Reasoning to develop
 an automated audio-based bird specie classifier. The case base was built out
 of recordings from 8 different species. Frame division was used for higher
 performance and we use periodogram as feature extraction method. Our project
