--- a/report/background.tex
+++ b/report/background.tex
@@ -1,13 +1,13 @@
 \section{Background and related work}
 Robert Gubkar and Michal Kuba\cite{6566278}  from the university of Zilinia in Slovakia
-conducted a study about comparision of audio features for elementary sound
+conducted a study about comparison of audio features for elementary sound
 based audio classification. They compared two sets of audio features for classification
-of various sonds such as applause, crying, laugh, music, noise and speech.
+of various sounds such as applause, crying, laugh, music, noise and speech.
 The first set of features consist of mel-frequency ceptral coefficients together with
-their first and seconds order time derivaties. The seconds set consists of line
+their first and second order time derivatives. The seconds set consists of line
 spectral frequencies, spectral flux and zero crossing rate. Their test shows that
 the second set of features were superior to classical MFCC coefficients for general
-sound patter recognition and comparable for speech recognition.\\
+sound pattern recognition and comparable for speech recognition.\\
 
 Jijung Deng et. al.\cite{6138136} created a fingerprinting system based on spectral energy
 structure of the audio signal. Audi fingerprint is a compact unique content-based
@@ -68,7 +68,7 @@ only works with stationary noise. Non-stationary noise is even more error prone.
 
 
 
-Paper\cite{6497946} present a method to reduce the number of fingerprints or cases by increasing the fingerprint size which will improve memory consumtion and serch time.
+Paper\cite{6497946} present a method to reduce the number of fingerprints or cases by increasing the fingerprint size which will improve memory consumption and search time.
 "The proposed method uses the fingerprint extraction algorithm in time and frequency domains using wavelet transform. The audio signal was decomposed into 5-layer wavelet, and then calculated the energy distribution center, the energy of sub-band in wavelet domain, and the variance of wavelet coefficient. Finally, by using the results Calculated as the parameters of the audio fingerprints, the 8-bit fingerprint block per frame was generated"\cite{6497946}.\\
 
 
