--- a/report/results.tex
+++ b/report/results.tex
@@ -4,11 +4,11 @@ been successful in many ways. The final version met all the initial requirements
 stated at the beginning of the project and the code has a low footprint while
 providing an adequate performance. The leave-one-out-bird cross-validation method has been used
 for the validation of the CBR. In details, for validation of the CBR another audio recording
-of a bluethroat bird (called bluethroat2) has been added and validated against the database.
+of a bluethroat bird (called Bluethroat 2) has been added and validated against the database.
 Since the database already includes features from bluethroat, a valid classification is expected.
 
 In Figure~\ref{fig:results1} and other figures in this section, we see number of matches over number of
-neighbours when comparing 137 samples or 4 seconds of Bluethroat2 against the database. Different figures
+neighbours when comparing 137 samples or 4 seconds of Bluethroat 2 against the database. Different figures
 represent different weight and distance function configurations.
 
 
@@ -20,7 +20,7 @@ represent different weight and distance function configurations.
     \subfloat[Canberra. \fontfamily{qcr}\selectfont \newline 1.0 * FFT Peak 1 \newline 1.0 * FFT Peak 1 Delta]{
       \includegraphics[clip,width=0.4\columnwidth]{eval-canberra-0_0-0_0-1_0-0_0-1_0-0_0-0_0-0_0}
     }
-    \caption{Comparing 137 samples or 4 seconds of Bluethroat2 against the database. X-axis is the number of nearest neighbours (the k value) and Y-axis is number of matches for each class of bird.
+    \caption{Comparing 137 samples or 4 seconds of Bluethroat 2 against the database. X-axis is the number of nearest neighbours (the k value) and Y-axis is number of matches for each class of bird.
     This shows adding FFT Peak 1 Delta does not yield significantly better result.  }
     \label{fig:results1}
 \end{figure}
