--- a/report/summary.tex
+++ b/report/summary.tex
@@ -2,9 +2,9 @@
 The developed classifier met all the requirements which were validated
 by the various tests performed. Audio files of eight different birds has been
 acquired while the birds are singing. A moving window
-with a predefined boundaries scans the signal in the time domain and a tranformation
+with a predefined boundaries scans the signal in the time domain and a transformation
 from the time-domain to frequency domain has been conducted in order to extract features.
-The two frequencies with the highest amplutide have been extracted for each frame.
+The two frequencies with the highest amplitude have been extracted for each frame.
 These two features together with the class constitute the database for CBR.
 
 The CBR written in the Ada programming language uses the K nearest approach to
@@ -18,5 +18,5 @@ the user can test for classification of other animals such as whales or dogs.
 
 With higher reliability, this system could be used for people with hearing impairment
 in order to hear the sound of different subjects by using vibration motors. Another application
-would be surveillance system for detecting signicant
+would be surveillance system for detecting significant
 audio events such as glass brake, gunshot, siren, etc.
